--- a/Chart.yaml
+++ b/Chart.yaml
@@ -1,10 +1,9 @@
 apiVersion: v2
 name: k8spacket
-description: A Helm chart for Kubernetes
+description: A Helm chart for k8spacket tool
 
 maintainers:
   - name: k8spacket
     email: k8spacket@gmail.com
-type: application
 version: 0.1.0
 appVersion: 0.1.0
