--- a/templates/service.yaml
+++ b/templates/service.yaml
@@ -9,7 +9,7 @@ spec:
   type: {{ .Values.service.type }}
   ports:
     - port: {{ .Values.service.port }}
-      targetPort: {{ .Values.service.port }}
+      targetPort: {{ .Values.k8sPacket.tcp.listener.port }}
       protocol: TCP
       name: http
       nodePort: {{ .Values.service.nodePort }}
