--- a/templates/clusterrole.yaml
+++ b/templates/clusterrole.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.clusterRole.create -}}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
@@ -12,3 +13,4 @@ rules:
     - "get"
     - "watch"
     - "list"
+{{- end }}
