--- a/templates/clusterrolebinding.yaml
+++ b/templates/clusterrolebinding.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.clusterRole.create -}}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
@@ -10,3 +11,4 @@ roleRef:
   kind: ClusterRole
   name: {{ include "k8spacket.name" . }}-role
   apiGroup: rbac.authorization.k8s.io
+{{- end }}
