--- a/values.yaml
+++ b/values.yaml
@@ -9,6 +9,9 @@ serviceAccount:
   # Annotations to add to the service account
   annotations: {}
 
+clusterRole:
+  create: true
+
 podAnnotations: {}
 
 priorityClassName: ""
