--- a/charts/k8spacket/values.yaml
+++ b/charts/k8spacket/values.yaml
@@ -44,6 +44,10 @@ resources:
 tolerations: []
 
 k8sPacket:
+  ## Available plugin releases. Custom plugins can be provided
+  plugins:
+    - https://github.com/k8spacket/plugins/releases/download/v1.0.0-alpha/nodegraph.so
+    - https://github.com/k8spacket/plugins/releases/download/v1.0.0-alpha/tls-parser.so
   metrics:
     ## Hide source port when 'true' (set to string value 'dynamic' instead of decimal real source port) for Prometheus metrics cardinality reasons
     hideSourcePort: true
