--- a/charts/k8spacket/Chart.yaml
+++ b/charts/k8spacket/Chart.yaml
@@ -5,5 +5,5 @@ description: A Helm chart for k8spacket tool
 maintainers:
   - name: k8spacket
     email: k8spacket@gmail.com
-version: 1.0.0-alpha
-appVersion: 1.0.0-alpha
+version: 1.0.0
+appVersion: 1.0.0
