--- a/charts/k8spacket/values.yaml
+++ b/charts/k8spacket/values.yaml
@@ -2,6 +2,10 @@ replicaCount: 1
 
 affinity: {}
 
+initContainer:
+  image: busybox
+  pullPolicy: IfNotPresent
+
 image:
   repository: docker.io/k8spacket/k8spacket
   pullPolicy: IfNotPresent
