--- a/charts/k8spacket/templates/daemonset.yaml
+++ b/charts/k8spacket/templates/daemonset.yaml
@@ -46,7 +46,7 @@ spec:
         - name: init-k8spacket
           image: {{ .Values.initContainer.image }}
           imagePullPolicy: {{ .Values.initContainer.pullPolicy }}
-          command: [ 'sh', '-c', "cd ./plugins && echo $K8S_PACKET_AVAILABLE_PLUGINS | tr ',' '\n' | xargs wget || true" ]
+          command: [ 'sh', '-c', "cd ./plugins && eval echo $(echo $K8S_PACKET_AVAILABLE_PLUGINS) | tr ',' '\n' | xargs wget || true" ]
           env:
           - name: K8S_PACKET_AVAILABLE_PLUGINS
             value: '{{ join "," .Values.k8sPacket.plugins }}'
