--- a/charts/k8spacket/templates/daemonset.yaml
+++ b/charts/k8spacket/templates/daemonset.yaml
@@ -75,28 +75,29 @@ spec:
           - name: K8S_PACKET_NAME_LABEL_VALUE
             value: {{ include "k8spacket.name" . }}
           - name: K8S_PACKET_HIDE_SRC_PORT
-            value: {{ .Values.k8sPacket.metrics.hideSourcePort | quote}}
+            value: {{ .Values.k8sPacket.metrics.hideSourcePort | quote }}
           - name: K8S_PACKET_REVERSE_GEOIP2_DB_PATH
             value: {{ .Values.k8sPacket.metrics.reverseLookup.geoipDBPath }}
           - name: K8S_PACKET_REVERSE_WHOIS_REGEXP
             value: {{ .Values.k8sPacket.metrics.reverseLookup.whoisRegexp }}
-          - name: K8S_PACKET_TCP_ASSEMBLER_MAX_PAGES_PER_CONN
-            value: {{ .Values.k8sPacket.tcp.assembler.maxPagesPerConnection | quote}}
-          - name: K8S_PACKET_TCP_ASSEMBLER_MAX_PAGES_TOTAL
-            value: {{ .Values.k8sPacket.tcp.assembler.maxPagesTotal | quote}}
-          - name: K8S_PACKET_TCP_ASSEMBLER_FLUSHING_PERIOD
-            value: {{ .Values.k8sPacket.tcp.assembler.flushing.periodDuration }}
-          - name: K8S_PACKET_TCP_ASSEMBLER_FLUSHING_CLOSE_OLDER_THAN
-            value: {{ .Values.k8sPacket.tcp.assembler.flushing.closeOlderThanDuration }}
           - name: K8S_PACKET_TCP_LISTENER_PORT
             value: {{ .Values.k8sPacket.tcp.listener.port | quote }}
           - name: K8S_PACKET_TCP_LISTENER_INTERFACES_COMMAND
             value: {{ .Values.k8sPacket.tcp.listener.interfaces.command }}
           - name: K8S_PACKET_TCP_LISTENER_INTERFACES_REFRESH_PERIOD
             value: {{ .Values.k8sPacket.tcp.listener.interfaces.refreshPeriod }}
+          - name: K8S_PACKET_TCP_PERSISTENT_DURATION
+            value: {{ .Values.k8sPacket.tcp.connection.persistentDuration }}
+          - name: K8S_PACKET_TLS_CERTIFICATE_CACHE_TTL
+            value: {{ .Values.k8sPacket.tls.certificate.cache.ttl }}
           volumeMounts:
             - mountPath: /home/k8spacket/plugins
               name: plugins
+            - mountPath: /sys/kernel/tracing
+              name: tracing
       volumes:
-        - emptyDir: {}
-          name: plugins
+        - name: plugins
+          emptyDir: {}
+        - name: tracing
+          hostPath:
+            path: /sys/kernel/tracing
