--- a/charts/k8spacket/templates/daemonset.yaml
+++ b/charts/k8spacket/templates/daemonset.yaml
@@ -74,12 +74,10 @@ spec:
           env:
           - name: K8S_PACKET_NAME_LABEL_VALUE
             value: {{ include "k8spacket.name" . }}
-          - name: K8S_PACKET_HIDE_SRC_PORT
-            value: {{ .Values.k8sPacket.metrics.hideSourcePort | quote }}
           - name: K8S_PACKET_REVERSE_GEOIP2_DB_PATH
-            value: {{ .Values.k8sPacket.metrics.reverseLookup.geoipDBPath }}
+            value: {{ .Values.k8sPacket.reverseLookup.geoipDBPath }}
           - name: K8S_PACKET_REVERSE_WHOIS_REGEXP
-            value: {{ .Values.k8sPacket.metrics.reverseLookup.whoisRegexp }}
+            value: {{ .Values.k8sPacket.reverseLookup.whoisRegexp }}
           - name: K8S_PACKET_TCP_LISTENER_PORT
             value: {{ .Values.k8sPacket.tcp.listener.port | quote }}
           - name: K8S_PACKET_TCP_LISTENER_INTERFACES_COMMAND
@@ -88,8 +86,14 @@ spec:
             value: {{ .Values.k8sPacket.tcp.listener.interfaces.refreshPeriod }}
           - name: K8S_PACKET_TCP_PERSISTENT_DURATION
             value: {{ .Values.k8sPacket.tcp.connection.persistentDuration }}
+          - name: K8S_PACKET_TCP_METRICS_ENABLED
+            value: {{ .Values.k8sPacket.tcp.metrics.enabled | quote }}
+          - name: K8S_PACKET_TCP_METRICS_HIDE_SRC_PORT
+            value: {{ .Values.k8sPacket.tcp.metrics.hideSourcePort | quote }}
           - name: K8S_PACKET_TLS_CERTIFICATE_CACHE_TTL
             value: {{ .Values.k8sPacket.tls.certificate.cache.ttl }}
+          - name: K8S_PACKET_TLS_METRICS_ENABLED
+            value: {{ .Values.k8sPacket.tls.metrics.enabled | quote }}
           volumeMounts:
             - mountPath: /home/k8spacket/plugins
               name: plugins
