--- a/charts/k8spacket/values.yaml
+++ b/charts/k8spacket/values.yaml
@@ -56,17 +56,14 @@ tolerations: []
 k8sPacket:
   ## Available plugin releases. Custom plugins can be provided
   plugins:
-    - https://github.com/k8spacket/plugins/releases/download/v2.0.0/nodegraph-$(arch).so
-    - https://github.com/k8spacket/plugins/releases/download/v2.0.0/tls-parser-$(arch).so
-  metrics:
-    ## Hide source port when 'true' (set to string value 'dynamic' instead of decimal real source port) for Prometheus metrics cardinality reasons
-    hideSourcePort: true
-    reverseLookup:
-      ## Reverse lookup db file based on GeoLite2 Free Geolocation Data
-      ## See: https://dev.maxmind.com/geoip/geolite2-free-geolocation-data?lang=en
-      geoipDBPath: "/home/k8spacket/GeoLite2-City.mmdb"
-      ## Whois result match regexp
-      whoisRegexp: "(?:OrgName:|org-name:)\\s*(.*)"
+    - https://github.com/k8spacket/plugins/releases/download/v2.0.1/nodegraph-$(arch).so
+    - https://github.com/k8spacket/plugins/releases/download/v2.0.1/tls-parser-$(arch).so
+  reverseLookup:
+    ## Reverse lookup db file based on GeoLite2 Free Geolocation Data
+    ## See: https://dev.maxmind.com/geoip/geolite2-free-geolocation-data?lang=en
+    geoipDBPath: "/home/k8spacket/GeoLite2-City.mmdb"
+    ## Whois result match regexp
+    whoisRegexp: "(?:OrgName:|org-name:)\\s*(.*)"
   tcp:
     connection:
       ## When a connection is treated as persistent
@@ -78,8 +75,16 @@ k8sPacket:
         command: "ip address | grep @ | sed -E 's/.* (\\w+)@.*/\\1/' | tr '\\n' ',' | sed 's/.$//'"
         ## How often refresh the list of network interfaces to listen
         refreshPeriod: "10s"
+    metrics:
+      ## Enabled/disabled exposing TCP Prometheus metrics
+      enabled: true
+      ## Hide source port when 'true' (set to string value 'dynamic' instead of decimal real source port) for Prometheus metrics cardinality reasons
+      hideSourcePort: true
   tls:
     certificate:
       cache:
         ## How long scraped TLS certificates are stored in a cache
         ttl: "24h"
+    metrics:
+      ## Enabled/disabled exposing TLS Prometheus metrics
+      enabled: true
