--- a/charts/k8spacket/values.yaml
+++ b/charts/k8spacket/values.yaml
@@ -89,7 +89,8 @@ k8sPacket:
       ## Enabled/disabled exposing TLS Prometheus metrics
       enabled: true
   volumes:
-    ## path to kernel tracing folder on instance
-    ## default to /sys/kernel/tracing
-    ## on AmazonLinux this should be set to /sys/kernel/debug/tracing
+    ## path to kernel tracing folder on an instance
+    ## default to '/sys/kernel/tracing'
+    ## check by command: 'mount -t tracefs'
+    ## f.e. on 'Amazon Linux 2 Kernel 5.10' this should be set to '/sys/kernel/debug/tracing'
     tracingPath: /sys/kernel/tracing
