feat: Make volume host path configurable (#31)
* feat: Make volume host path configurable

* fix: Review comments

* Adapt value documentation to make more clear how to set this value
* Upgrade Chart version

--- a/charts/k8spacket/values.yaml
+++ b/charts/k8spacket/values.yaml
@@ -88,3 +88,9 @@ k8sPacket:
     metrics:
       ## Enabled/disabled exposing TLS Prometheus metrics
       enabled: true
+  volumes:
+    ## path to kernel tracing folder on an instance
+    ## default to '/sys/kernel/tracing'
+    ## check by command: 'mount -t tracefs'
+    ## f.e. on 'Amazon Linux 2 Kernel 5.10' this should be set to '/sys/kernel/debug/tracing'
+    tracingPath: /sys/kernel/tracing
