--- a/charts/k8spacket/templates/servicemonitor.yaml
+++ b/charts/k8spacket/templates/servicemonitor.yaml
@@ -24,4 +24,12 @@ spec:
     - targetPort: {{ default "metrics" .Values.k8sPacket.tcp.metrics.serviceMonitor.port | quote }}
       interval:  {{ default "30s" .Values.k8sPacket.tcp.metrics.serviceMonitor.interval | quote }}
       path: {{ default "/metrics" .Values.k8sPacket.tcp.metrics.serviceMonitor.path | quote }}
+      {{- with .Values.k8sPacket.tcp.metrics.serviceMonitor.relabelings }}
+      relabelings:
+        {{- toYaml . | nindent 6 }}
+      {{- end }}
+      {{- with .Values.k8sPacket.tcp.metrics.serviceMonitor.metricRelabelings }}
+      metricRelabelings:
+        {{- toYaml . | nindent 6 }}
+      {{- end }}
 {{- end }}
