--- a/charts/k8spacket/values.yaml
+++ b/charts/k8spacket/values.yaml
@@ -58,6 +58,36 @@ resources:
 
 tolerations: []
 
+## Prometheus Operator ServiceMonitor configuration
+serviceMonitor:
+  ## Note: .serviceMonitor.enabled activation depends on containerPorts
+  ##
+  enabled: false
+  ## Specify the namespace for the ServiceMonitor
+  ##
+  namespace: ""
+  ## Define the scrape interval for Prometheus
+  ##
+  interval: ""
+  ## Extra labels for the ServiceMonitor
+  ##
+  labels: {}
+  ## Annotations for the ServiceMonitor
+  ##
+  annotations: {}
+  ## Define the port for Prometheus to scrape metrics
+  ##
+  port: "metrics"
+  ## Path that Prometheus will use to pull metrics from the container
+  ##
+  path: "/metrics"
+  ## RelabelConfigs to apply to samples before scraping
+  ##
+  relabelings: []
+  ## MetricRelabelConfigs to apply to samples before ingestion.
+  ##
+  metricRelabelings: []
+
 k8sPacket:
   ## Available plugin releases. Custom plugins can be provided
   api:
@@ -88,35 +118,6 @@ k8sPacket:
       enabled: true
       ## Hide source port when 'true' (set to string value 'dynamic' instead of decimal real source port) for Prometheus metrics cardinality reasons
       hideSourcePort: true
-      ## Prometheus Operator ServiceMonitor configuration
-      serviceMonitor:
-        ## Note: metrics.serviceMonitor.enabled activation depends on containerPorts
-        ##
-        enabled: false
-        ## Specify the namespace for the ServiceMonitor
-        ##
-        namespace: ""
-        ## Define the scrape interval for Prometheus
-        ##
-        interval: ""
-        ## Extra labels for the ServiceMonitor
-        ##
-        labels: {}
-        ## Annotations for the ServiceMonitor
-        ##
-        annotations: {}
-        ## Define the port for Prometheus to scrape metrics
-        ##
-        port: "metrics"
-        ## Path that Prometheus will use to pull metrics from the container
-        ##
-        path: "/metrics"
-        ## RelabelConfigs to apply to samples before scraping
-        ##
-        relabelings: []
-        ## MetricRelabelConfigs to apply to samples before ingestion.
-        ##
-        metricRelabelings: []
   tls:
     certificate:
       cache:
