--- a/charts/k8spacket/values.yaml
+++ b/charts/k8spacket/values.yaml
@@ -122,6 +122,9 @@ k8sPacket:
     metrics:
       ## Enabled/disabled exposing TLS Prometheus metrics
       enabled: true
+  logger:
+    ## Logger level. Available values: DEBUG,INFO,WARN,ERROR
+    level: INFO
   volumes:
     ## path to kernel tracing folder on an instance
     ## default to '/sys/kernel/tracing'
